--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/templates/exampleRedirect.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/templates/exampleRedirect.html
@@ -54,14 +54,15 @@
             .columns["option"].format(function (event,val, data) {
                 var span = $('<span class="btn btn-link">修改</span>');
                 span.bind('click', function () {
-                    BitPage.Redirect("/Templates/ExampleRedirectEdit", { exampleId: data.exampleId }, "ExampleRedirect");
+                    //goPage("/Templates/ExampleRedirectEdit", { exampleId: data.exampleId }, "ExampleRedirect");
+                    goPage("/Templates/ExampleRedirectEdit", { exampleId: data.exampleId });
                 });
                 $(this).append(span);
             })
             .query();
 
         $("#Add").click(function () {
-            BitPage.Redirect("/Templates/ExampleRedirectEdit", { exampleId: '' }, "ExampleRedirect");
+            goPage("/Templates/ExampleRedirectEdit", { exampleId: '' }, "ExampleRedirect");
         });
     });
 </script>
